<resources>
    <string name="app_name">LoginApi</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="name">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">Logo</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register Here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="sign_up_now">Sign Up Now</string>
</resources>
