<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewmodel"
            type="com.example.loginapi.ui.auth.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.auth.SignupActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="fill_parent"
                    android:layout_height="98dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo"
                    android:scaleType="center"
                    android:src="@drawable/ic_sans_titre___2" />

                <!-- Cadre du formulaire -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/background_field_container"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="12dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:contentDescription="@string/prompt_email"
                            android:src="@drawable/ic_avatar" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/firstname"
                                android:text="@={viewmodel.firstname}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingTop="12dp"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                android:paddingBottom="12dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorSolitude" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:contentDescription="@string/prompt_email"
                            android:src="@drawable/ic_avatar" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/lastname"
                                android:text="@={viewmodel.lastname}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/lastname"
                                android:inputType="text"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingTop="12dp"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                android:paddingBottom="12dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorSolitude" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:contentDescription="@string/prompt_email"
                            android:src="@drawable/ic_email" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false">

                            <AutoCompleteTextView
                                android:id="@+id/email"
                                android:text="@={viewmodel.email}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingTop="12dp"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                android:paddingBottom="12dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorSolitude" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:contentDescription="@string/password"
                            android:src="@drawable/ic_lock" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/password"
                                android:text="@={viewmodel.password}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/password"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingTop="12dp"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                android:paddingBottom="12dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginLeft="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorSolitude" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:contentDescription="@string/password"
                            android:src="@drawable/ic_lock" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/confirm_password"
                                android:text="@={viewmodel.passwordConfirm}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:hint="@string/confirm_password"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:paddingLeft="@dimen/activity_horizontal_margin"
                                android:paddingTop="12dp"
                                android:paddingRight="@dimen/activity_horizontal_margin"
                                android:paddingBottom="12dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>
                <!-- Fin du cadre du formulaire -->

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewmodel::onSignupButtonClick}"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/background_button_accent"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/action_sign_up"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/email_login_form"
                android:layout_marginTop="40dp"
                android:background="@color/colorWhiteSmoke"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{viewmodel::onLogin}"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Singn In Here"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>


        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>